Closed Bug 357877 Opened 18 years ago Closed 18 years ago

nsFileChannel::OpenContentStream leaks when nsFileUploadContentStream::IsInitialized fails

Categories

(Core :: Networking: File, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: timeless, Assigned: sciguyryan)

References

()

Details

(Keywords: memory-leak)

Attachments

(1 file)

 
Assignee: gwynbryanjones → sciguyryan+bugzilla
Attached patch Patch v1Splinter Review
Patch v1.

* Delete uploadStream before we return.
Attachment #243401 - Flags: superreview?
Attachment #243401 - Flags: review?
Attachment #243401 - Flags: superreview?(cbiesinger)
Attachment #243401 - Flags: superreview?
Attachment #243401 - Flags: review?(cbiesinger)
Attachment #243401 - Flags: review?
Attachment #243401 - Flags: superreview?(cbiesinger)
Attachment #243401 - Flags: superreview+
Attachment #243401 - Flags: review?(cbiesinger)
Attachment #243401 - Flags: review+
Whiteboard: [checkin needed]
Checking in nsFileChannel.cpp;
/cvsroot/mozilla/netwerk/protocol/file/src/nsFileChannel.cpp,v  <--  nsFileChannel.cpp
new revision: 1.160; previous revision: 1.159
done
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Whiteboard: [checkin needed]
OS: SunOS → All
Hardware: PC → All
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: