Bug 357877 nsFileChannel::OpenContentStream leaks when nsFileUploadContentStream::IsInitialized fails patch by Ryan Jones <sciguyryan+bugzilla@gmail.com> r+sr=biesi